--- a/src/components/RedLiner/RedLiner.module.scss
+++ b/src/components/RedLiner/RedLiner.module.scss
@@ -26,6 +26,6 @@
 }
 
 // Add space around examples in docz's Playground
-div[data-testid="live-preview"] {
+div[data-testid='live-preview'] {
   padding: 44px 0 44px 30px;
 }
